--- a/css/style.css
+++ b/css/style.css
@@ -20,5 +20,6 @@ border: .25vmin solid black;
     width: 100vmin;
     height: 100vmin;
     display: grid;
-    grid-template-rows: repeat();
+    grid-template-rows: repeat(21, 1fr);
+    grid-template-columns: repeat(21, 1fr);
 }
