--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,29 @@
 body {
-height: 100vh;
-width: 100vw;
-display: flex;
-justify-content: center;
-align-items: center;
-margin: 0;
-background-color: black;
-}
-.snake {
-background-color: greenyellow;
-border: .25vmin solid black;
-}
-.food {
-    background-color: red;
-    border: .25vmin solid black;
-}
-#game-board {
-    background-color: #ccc;
-    width: 100vmin;
-    height: 100vmin;
-    display: grid;
-    grid-template-rows: repeat(21, 1fr);
-    grid-template-columns: repeat(21, 1fr);
-}
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: rgb(0, 0, 0);
+    }
+    .snake {
+    background-color: greenyellow;
+    border: .25vmin solid rgb(165, 22, 22);
+    }
+    .food {
+        background-color: red;
+        border: .25vmin solid rgb(167, 46, 46);
+        width: 25px;
+        height: 25px;
+        background: red;
+        border-radius: 50%
+    }
+    #game-board {
+        background-color: #9fe99f;
+        width: 100vmin;
+        height: 100vmin;
+        display: grid;
+        grid-template-rows: repeat(21, 1fr);
+        grid-template-columns: repeat(21, 1fr);
+    }
