--- a/css/style.css
+++ b/css/style.css
@@ -5,25 +5,25 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-color: rgb(180, 189, 49);
-    background-image: url("images.jpg");
+    background-color: rgb(80, 51, 19);
+    background-image: url("../img/images.jpg");
     }
     .snake {
-    background-color: rgb(241, 255, 47);
-    border: .15vmin solid rgb(15, 104, 221);
-    border-radius:150%
+    background-color: rgb(80, 51, 19);
+    border: .15vmin solid rgb(168, 152, 130);
+    /* border-radius:150% */
     }
     .food {
-        background-image: url("apple.jpg");
-         background-color: rgb(255, 255, 255); 
-        border: .25vmin solid rgb(165, 167, 46);
+        background-image: url("../img/apple.jpg"); 
+        background-color: rgb(18, 39, 8); 
+        border: .25vmin solid rgb(35, 182, 35);
         width: 20px;
         height: 20px;
-        /* background: red; */
+         background: rgb(23, 51, 27); 
         border-radius: 50%
     }
     #game-board {
-        background-image: url("images.jpg");
+        background-image: url("../img/images.jpg");
         background-color: #000000;
         width: 100vmin;
         height: 100vmin;
@@ -31,4 +31,9 @@ body {
         grid-template-rows: repeat(21, 1fr);
         grid-template-columns: repeat(21, 1fr);
     }
-    /*  */
+    .h1 {
+        
+        font-family: "Spicy Rice", serif;
+  font-weight: 400;
+  font-style: normal;
+    }
